# bot-dtstg

./: Dockerfile  docker-compose.yml  main.py  pyproject.toml
